<resources>
    <string name="app_name">Twingo</string>
    <string name="button_clear">Clear</string>
    <string name="button_notify">Notify</string>
    <string name="option_current_session">Current</string>
    <string name="option_previous_session">Previous</string>
    <string name="text_connected">Central connected</string>
    <string name="text_current_music">Music title\nArtist</string>
    <string name="text_disconnected">Central not connected</string>
    <string name="text_notify_characteristic">Notify characteristic:</string>
</resources>
